re PR c++/48292 ([C++0x] "sorry, unimplemented: use of 'type_pack_expansion' in template")

PR c++/48292
	* pt.c (tsubst_decl) [PARM_DECL]: Handle partial instantiation of
	function parameter pack.
	(tsubst_pack_expansion): Likewise.

From-SVN: r174207